# www-python-scot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
app/: __init__.py  config.py
app/static/: main.css
app/static/css/: main.css
app/templates/: index.html
app/templates/extends/: main.html
app/templates/includes/: alpinejs_data_main.html  footer.html  menu.html  pinned_emoji.html
app/templates/pages/: code-of-conduct.html  get-involved.html  home.html  our-mission.html  support-us.html
app/templates/pages/home/: 0_index.html  1_welcome.html
tailwindcss/: __main__.css  article.css  button.css  structure.css
