[project]
name = "www-python-scot"
version = "0.1.0"
description = "The website for Python Scotland"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pyhead>=4.2.0",
]

[dependency-groups]
dev = [
    "favicons>=0.2.2",
    "pyqwe>=3.1.1",
]

[tool.pyqwe]
flask = "*:flask run --debug"
tailwindcss = "*:npx @tailwindcss/cli -i ./tailwindcss/__main__.css -o ./app/static/css/main.css --watch"
dev = [
    "*:flask run --debug --port 5001",
    "*:npx @tailwindcss/cli -i ./tailwindcss/__main__.css -o ./app/static/css/main.css --watch"
]
